<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/continu"
        android:enabled="true"
        android:icon="@drawable/continue_img"
        android:title="@string/continu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/product"
        android:enabled="true"
        android:icon="@drawable/product"
        android:title="@string/product"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/dashboard"
        android:enabled="true"
        android:icon="@drawable/dashboard"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/new_"
        android:enabled="true"
        android:icon="@drawable/new_img"
        android:title="@string/new_"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>