<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:background="@color/white"
	android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto"

	>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main"
        android:layout_alignParentTop="true"
        >
        <Button android:id="@+id/fetch_contacts" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFetchContactsClick"
            android:text="@string/fetch_contacts_button" />

        <Button android:id="@+id/fetch_accounts" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFetchAccountsClick"
            android:text="@string/fetch_accounts_button" />

        <Button android:id="@+id/clear" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClearClick"
            android:text="@string/clear_button" />
    </LinearLayout>

	<!--<include layout="@layout/header" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linear_bottombar"
        android:layout_below="@+id/main"
        >




        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/contact_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:padding="10dp"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:background="@color/white"
            android:layout_below="@+id/main"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:itemBackground="@color/red_700"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottom_navigation_main" />
    </LinearLayout>

</RelativeLayout>
